--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.7.2.jar"/>
-	<classpathentry kind="lib" path="/Users/Sujay/Documents/workspace/SDsemantics/lib/je-5.0.58.jar"/>
+	<classpathentry kind="lib" path="lib/je-5.0.58.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
